--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icon": "^1.0.0"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.72.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
