--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/khuong09072004/HIT14_ReactJs",
+  "homepage": "https://github.com/khuong09072004/HIT-React-14.gitn",
   "name": "btvn-b2",
   "private": true,
   "version": "0.0.0",
