fix homepage in file package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/khuong09072004/HIT-React-14.git",
+  "homepage": "https://khuong09072004.github.io/HIT-React-14/",
   "name": "btvn-b2",
   "private": true,
   "version": "0.0.0",
